Revert "09022024-1lenovo"
This reverts commit a66fce1d